# QT-Traductor-Completo

./: .gitignore  Proyecto.rar  README.md  automata.cpp  compilador.inf  main.cpp  mainwindow.cpp  mainwindow.ui
.cmake/api/v1/reply/: cache-v2-0e94589b13e997fa5873.json  cmakeFiles-v1-8d83430bce01b3804401.json  codemodel-v2-4c5b93563787ae8e08d6.json  directory-.-Release-fe839b3844f8b91c1a43.json  index-2022-10-05T01-00-31-0144.json  target-Traductor_lexico-Release-5ce87680449208ef87c5.json  target-Traductor_lexico_autogen-Release-8c9e11b8f10d4f1ebc8d.json  target-Traductor_lexico_autogen_timestamp_deps-Release-57bdcf118944d54ff11c.json
Codigo fuente/: CMakeLists.txt  automata.h  mainwindow.h
Modulo 2/Código fuente/: automata.cpp  automata.h  e.h  ep.cpp  ep.h  mainwindow.h  nt.h  pila.h  t.cpp
Modulo 2/Reglas Gramaticales/: Reglas.xlsx
Modulo 3/Reglas Gramaticales/: Reglas.xlsx  compilador.xlsx
Modulo 4/Calculadora/: CMakeLists.txt  CMakeLists.txt.user.aeabaf5  CMakeLists.txt.user.db060b9  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Proyecto/: CMakeLists.txt  arbolsintactico.cpp  arbolsintactico.h  automata.cpp  automata.h  e.cpp  e.h  ep.cpp  ep.h  fonts.qrc  lista.cpp  lista.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  nodo.cpp  nodo.h  nt.cpp  nt.h  pila.cpp  pila.h  reglas.cpp  reglas.h  semantico.cpp  semantico.h  simbolo.cpp  simbolo.h  t.h  tabsim.cpp  tabsim.h
